src/TestSuite/TestOpts.ATG
$01246
/*-------------------------------------------------------------------------
Test of options in productions.
----------------------------------------------------------------------------*/
COMPILER Test

TOKENS
  a = "a".
  b = "b".
  c = "c".
  d = "d".
  e = "e".
  f = "f".

PRODUCTIONS

Test = a | [b] c | [Del] | d [[d][e]f].
Del  = [e].

END Test.
